--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "sw/ext/chibios"]
 	path = sw/ext/chibios
 	url = https://github.com/mabl/ChibiOS.git
+[submodule "sw/ext/cJSON"]
+	path = sw/ext/cJSON
+	url = https://github.com/kbranigan/cJSON
